// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavLink matches snapshot when the link does not matche location pathname 1`] = `
<div
  className="header-nav-link-container  is-not-bolded"
>
  <div
    className="header-nav-link"
  >
    <div
      className="header-nav-link-text "
    >
      <Link
        replace={false}
        to="/"
      >
        test
      </Link>
    </div>
  </div>
</div>
`;

exports[`NavLink matches snapshot when the link matches location pathname 1`] = `
<div
  className="header-nav-link-container  is-bolded"
>
  <div
    className="header-nav-link"
  >
    <div
      className="header-nav-link-text "
    >
      <Link
        replace={false}
        to="/"
      >
        test
      </Link>
    </div>
  </div>
</div>
`;
